--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,10 @@
 </head>
 <body>
     <div id="root">
-        <noscript><h1>You need to enable JavaScript to run this app.</h1></noscript>
+        <noscript>
+            <h1>You need to enable JavaScript to run this app.</h1>
+            Here are the <a href="https://www.enable-javascript.com/"> instructions how to enable JavaScript in your web browser</a>.
+        </noscript>
     </div>
     <script>
         document.body.children[0].innerHTML = `
